agregue macros excel

--- a/index.html
+++ b/index.html
@@ -178,8 +178,8 @@
                         class="rounded m-sm-1 text-white border-0" 
                         style="background-color:lightslategray;" 
                         data-bs-toggle="popover" 
-                        data-bs-content="Metodologia agil">
-                            Scrum
+                        data-bs-content="Programacion en VBA">
+                            Macros Excel
                         </button>
                         <button
                         data-bs-placement="bottom"
